# jbackup

./: README.md  pyproject.toml
docs/: PLAN.md
src/: app.py  cli.py
src/core/: backup.py  compress.py  config.py
